<resources>
    <string name="app_name">Medewerker van de maand</string>
    <string name="title_start">Start</string>
    <string name="title_editor">Editor</string>
    <string name="title_share">Share</string>
    <string name="start_camera">Open Camera</string>
    <string name="start_gallery">Open Gallery</string>
    <string name="add_text">Voeg tekst toe</string>
    <string name="add_sticker">Voeg sticker toe</string>
    <string name="save">Foto opslaan</string>
</resources>
