<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_start">

    <fragment
        android:id="@+id/navigation_start"
        android:name="me.robertjan.sdpr1.ui.start.StartFragment"
        android:label="@string/title_start"
        tools:layout="@layout/fragment_start" />

    <fragment
        android:id="@+id/navigation_editor"
        android:name="me.robertjan.sdpr1.ui.editor.EditorFragment"
        android:label="@string/title_editor"
        tools:layout="@layout/fragment_editor" />

    <fragment
        android:id="@+id/navigation_share"
        android:name="me.robertjan.sdpr1.ui.share.ShareFragment"
        android:label="@string/title_share"
        tools:layout="@layout/fragment_share" />
</navigation>